Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/Site_Visit__c.object-meta.xml
<CustomObject>
    <label>Site Visit</label>
    <nameField>
        <displayFormat>SVN-{00000000}</displayFormat>
        <label>Site Visit No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Visits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>