Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Action_Required__c.field-meta.xml
<CustomField>
    <fullName>Action_Required__c</fullName>
    <label>Action Required</label>
    <type>TextArea</type>
</CustomField>