Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken__c</fullName>
    <label>Action Taken</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>