Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Action_Taken_Date__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken_Date__c</fullName>
    <label>Action Taken Date</label>
    <type>Date</type>
</CustomField>