Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Actual_Site_Visit_District__c.field-meta.xml
<CustomField>
    <fullName>Actual_Site_Visit_District__c</fullName>
    <formula>IF(!ISBLANK( Party_Name__c ), TEXT(Party_Name__r.District__c) , 
IF(!ISBLANK( Contacts__c ), TEXT(Contacts__r.District__c) , 
IF(!ISBLANK( Distributor_Dealer__c ), TEXT( Distributor_Dealer__r.District__c) , 
TEXT(District__c) )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Site Visit District</label>
    <type>Text</type>
</CustomField>