Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Actual_Site_visit_Location__c.field-meta.xml
<CustomField>
    <fullName>Actual_Site_visit_Location__c</fullName>
    <formula>/*IF(!ISBLANK( Party_Name__c ), Party_Name__r.Street_Address__c +  Party_Name__r.City__c, 
IF(!ISBLANK( Contacts__c ), Contacts__r.Street__c , 
IF(!ISBLANK( Distributor_Dealer__c ),  Distributor_Dealer__r.Address__c + Distributor_Dealer__r.City__c, 
Party_Name__r.Street_Address__c + Party_Name__r.City__c ))) */

IF(!ISBLANK( Party_Name__c ),Party_Name__r.City__c, 
IF(!ISBLANK( Contacts__c ), Contacts__r.Street__c , 
IF(!ISBLANK( Distributor_Dealer__c ),Distributor_Dealer__r.City__c, 
Party_Name__r.City__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Site visit Location</label>
    <type>Text</type>
</CustomField>