Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Actual_Site_Visit_State__c.field-meta.xml
<CustomField>
    <fullName>Actual_Site_Visit_State__c</fullName>
    <formula>IF(!ISBLANK( Party_Name__c ), TEXT(Party_Name__r.State__c) ,
IF(!ISBLANK( Contacts__c ), TEXT(Contacts__r.State__c) ,
IF(!ISBLANK( Distributor_Dealer__c ), TEXT( Distributor_Dealer__r.State__c) ,
 TEXT(State__c) )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Site Visit State</label>
    <type>Text</type>
</CustomField>