Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Any_Branding_Required__c.field-meta.xml
<CustomField>
    <fullName>Any_Branding_Required__c</fullName>
    <description>Temporary Field until Dealers are moved into Standard Object</description>
    <formula>TEXT( Distributor_Dealer__r.Any_Branding_Required__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Any Branding Required</label>
    <type>Text</type>
</CustomField>