Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Area_Type__c.field-meta.xml
<CustomField>
    <fullName>Area_Type__c</fullName>
    <label>Area Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sandy</fullName>
            </value>
            <value>
                <fullName>Rocky/Boulder</fullName>
            </value>
            <value>
                <fullName>Clay Soil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>