Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Average_Depth_In_Feets__c.field-meta.xml
<CustomField>
    <fullName>Average_Depth_In_Feets__c</fullName>
    <label>Average Depth (In Feet)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>