Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/BD1__c.field-meta.xml
<CustomField>
    <fullName>BD1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BD1</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <filterItems>
            <field>User.ManagerId</field>
            <operation>equals</operation>
            <valueField>$User.Id</valueField>
        </filterItems>
        <filterItems>
            <field>$User.Id</field>
            <operation>equals</operation>
            <valueField>User.User_report__r.Id</valueField>
        </filterItems>
        <filterItems>
            <field>User.Manager1__c</field>
            <operation>equals</operation>
            <valueField>$User.Id</valueField>
        </filterItems>
        <filterItems>
            <field>User.Manager2__c</field>
            <operation>equals</operation>
            <valueField>$User.Id</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Site_Visits3</relationshipName>
    <type>Lookup</type>
</CustomField>