Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/BD_Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>BD_Action_Taken__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BD Action Taken</label>
    <type>Checkbox</type>
</CustomField>