Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/BD_Action_Taken_Date__c.field-meta.xml
<CustomField>
    <fullName>BD_Action_Taken_Date__c</fullName>
    <label>BD Action Taken Date</label>
    <type>Date</type>
</CustomField>