Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/BD_Action_Taken_Remarks__c.field-meta.xml
<CustomField>
    <fullName>BD_Action_Taken_Remarks__c</fullName>
    <label>BD Action Taken Remarks</label>
    <type>TextArea</type>
</CustomField>