Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/BD_Nameowner__c.field-meta.xml
<CustomField>
    <fullName>BD_Nameowner__c</fullName>
    <formula>Tour_Plan1__r.BD_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BD Name</label>
    <type>Text</type>
</CustomField>