Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Bore_Size_Diameter__c.field-meta.xml
<CustomField>
    <fullName>Bore_Size_Diameter__c</fullName>
    <label>Bore Size (Diameter)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>