Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Calculate_Day__c.field-meta.xml
<CustomField>
    <fullName>Calculate_Day__c</fullName>
    <formula>CASE(MOD(  Date__c  - DATE(2014, 1, 4), 7), 0, &quot;Saturday&quot;, 1, &quot;Sunday&quot;, 2,&quot;Monday&quot;, 3, &quot;Tuesday&quot;, 4, &quot;Wednesday&quot;, 5, &quot;Thursday&quot;, 6,&quot;Friday&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculate Day(not used)</label>
    <type>Text</type>
</CustomField>