Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/CompetitorParty__c.field-meta.xml
<CustomField>
    <fullName>CompetitorParty__c</fullName>
    <label>Competitor Party</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>