Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Competitors_Current_Position__c.field-meta.xml
<CustomField>
    <fullName>Competitors_Current_Position__c</fullName>
    <label>Competitors Current Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very good</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>