Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Competitors_in_the_Market__c.field-meta.xml
<CustomField>
    <fullName>Competitors_in_the_Market__c</fullName>
    <label>Competitors in the Market</label>
    <type>TextArea</type>
</CustomField>