Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Competitors_Information__c.field-meta.xml
<CustomField>
    <fullName>Competitors_Information__c</fullName>
    <label>Competitors Information</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>