Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Competitors_Products_available__c.field-meta.xml
<CustomField>
    <fullName>Competitors_Products_available__c</fullName>
    <label>Competitors Products available</label>
    <type>TextArea</type>
</CustomField>