Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Complaint_Report__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Report__c</fullName>
    <label>Complaint Report</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>