Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Contact_Number_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number_Mobile__c</fullName>
    <formula>Party_Name__r.Contact_Number_Mobile__c</formula>
    <label>Contact Number Mobile</label>
    <type>Text</type>
</CustomField>