Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/ContactPerson1__c.field-meta.xml
<CustomField>
    <fullName>ContactPerson1__c</fullName>
    <formula>IF(!ISBLANK( Party_Name__c ),  Party_Name__r.Primary_Contact_Person_Name__c  ,
IF(!ISBLANK( Contacts__c ),  Contacts__r.Name  ,
IF(!ISBLANK( Distributor_Dealer__c ), Distributor_Dealer__r.Contact_Person__c  ,
Party_Name__r.Primary_Contact_Person_Name__c  )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactPerson</label>
    <type>Text</type>
</CustomField>