Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/ContactPerson__c.field-meta.xml
<CustomField>
    <fullName>ContactPerson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContactPerson(not used)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SiteVisits</relationshipLabel>
    <relationshipName>SiteVisits</relationshipName>
    <type>Lookup</type>
</CustomField>