Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>