Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Created_By_State__c.field-meta.xml
<CustomField>
    <fullName>Created_By_State__c</fullName>
    <formula>CreatedBy.State</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By State</label>
    <type>Text</type>
</CustomField>