Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Curent_Market_Situation__c.field-meta.xml
<CustomField>
    <fullName>Curent_Market_Situation__c</fullName>
    <label>Current Market Situation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>CPVC</fullName>
            </value>
            <value>
                <fullName>GI</fullName>
            </value>
            <value>
                <fullName>PVC</fullName>
            </value>
            <value>
                <fullName>PPR</fullName>
            </value>
            <value>
                <fullName>HDPE</fullName>
            </value>
            <value>
                <fullName>Column Pipes</fullName>
            </value>
            <value>
                <fullName>SWR</fullName>
            </value>
            <value>
                <fullName>Agri Pipes</fullName>
            </value>
            <value>
                <fullName>Rigid Pipes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>