Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Date_of_Joining_of_User__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Joining_of_User__c</fullName>
    <formula>CreatedBy.Date_of_Joining__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Joining of User</label>
    <type>Date</type>
</CustomField>