Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Date_of_Next_Visit__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Next_Visit__c</fullName>
    <label>Date of Next Visit</label>
    <type>Date</type>
</CustomField>