Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Delivery_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Pressure__c</fullName>
    <label>Delivery Pressure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>