Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Distributor_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <referenceTo>Distributor_Dealer__c</referenceTo>
    <relationshipLabel>Site Visits</relationshipLabel>
    <relationshipName>Site_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>