Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Email_manager__c.field-meta.xml
<CustomField>
    <fullName>Email_manager__c</fullName>
    <label>Email manager(not used)</label>
    <type>Email</type>
</CustomField>