Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <label>End Time(not used)</label>
    <type>DateTime</type>
</CustomField>