Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Escalate_To_TL_HO__c.field-meta.xml
<CustomField>
    <fullName>Escalate_To_TL_HO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalate To TL/HO</label>
    <type>Checkbox</type>
</CustomField>