Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Exhibition_Name__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Name__c</fullName>
    <label>Exhibition Name</label>
    <type>TextArea</type>
</CustomField>