Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>Firm_Name__c</fullName>
    <formula>Party_Name__r.Firm_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firm Name</label>
    <type>Text</type>
</CustomField>