Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/FPE_Name__c.field-meta.xml
<CustomField>
    <fullName>FPE_Name__c</fullName>
    <label>FPE Name</label>
    <type>TextArea</type>
</CustomField>