Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <label>From(not used)</label>
    <type>TextArea</type>
</CustomField>