Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Give_Reason__c.field-meta.xml
<CustomField>
    <fullName>Give_Reason__c</fullName>
    <description>Temporary Field until Dealers are moved into Standard Object</description>
    <formula>TEXT(Distributor_Dealer__r.Give_Reason__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Give Reason</label>
    <type>Text</type>
</CustomField>