Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/HP__c.field-meta.xml
<CustomField>
    <fullName>HP__c</fullName>
    <label>HP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>