Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/IfYesProducts__c.field-meta.xml
<CustomField>
    <fullName>IfYesProducts__c</fullName>
    <label>If Yes,Products</label>
    <type>TextArea</type>
</CustomField>