Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Is_Branding_Done__c.field-meta.xml
<CustomField>
    <fullName>Is_Branding_Done__c</fullName>
    <description>Temporary Field until Dealers are moved into Standard Object</description>
    <formula>TEXT(Distributor_Dealer__r.Is_Branding_Done__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Branding Done</label>
    <type>Text</type>
</CustomField>