Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Market_Potential__c.field-meta.xml
<CustomField>
    <fullName>Market_Potential__c</fullName>
    <label>Market Potential</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>