Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Mechanics_Meet_Actuals__c.field-meta.xml
<CustomField>
    <fullName>Mechanics_Meet_Actuals__c</fullName>
    <label>Mechanics Meet (Actuals)(not used)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>