Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Mentoring_Output__c.field-meta.xml
<CustomField>
    <fullName>Mentoring_Output__c</fullName>
    <label>Mentoring Output(not used)</label>
    <type>TextArea</type>
</CustomField>