Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Mentoring_task__c.field-meta.xml
<CustomField>
    <fullName>Mentoring_task__c</fullName>
    <label>Mentoring task(not used)</label>
    <type>TextArea</type>
</CustomField>