Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/No_of_Borewells__c.field-meta.xml
<CustomField>
    <fullName>No_of_Borewells__c</fullName>
    <label>No: of Borewells</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>