Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/No_of_Sanitory_Shops__c.field-meta.xml
<CustomField>
    <fullName>No_of_Sanitory_Shops__c</fullName>
    <label>No:of Sanitory Shops</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>