Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WCPC New Order</fullName>
            </value>
            <value>
                <fullName>WCPC Repeat Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>