Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Other_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Type__c</fullName>
    <label>Other Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>