Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Our_presence__c.field-meta.xml
<CustomField>
    <fullName>Our_presence__c</fullName>
    <label>Our Presence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>