Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Party__c.field-meta.xml
<CustomField>
    <fullName>Party__c</fullName>
    <formula>Status__c + TEXT(Party_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Party</label>
    <type>Text</type>
</CustomField>