Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Party_Name__c.field-meta.xml
<CustomField>
    <fullName>Party_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Party_Type__c</field>
            <operation>equals</operation>
            <valueField>Account.Party_Type__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SiteVisits</relationshipLabel>
    <relationshipName>SiteVisits</relationshipName>
    <type>Lookup</type>
</CustomField>