Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>Party_Name__r.Phone  +  Distributor_Dealer__r.Phone__c  + Contacts__r.Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>