Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Planned_Visit_District__c.field-meta.xml
<CustomField>
    <fullName>Planned_Visit_District__c</fullName>
    <formula>TEXT( Tour_Plan1__r.District__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Visit District</label>
    <type>Text</type>
</CustomField>